Modified changes for macos, take care for linx

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -929,23 +929,25 @@ map kitty_mod+n new_os_window
 #: kitty window. In particular you can use new_os_window_with_cwd to
 #: open a window with the current working directory.
 
-map kitty_mod+w close_window
+# map kitty_mod+w close_window
+map cmd+w close_window
+
 map kitty_mod+] next_window
 map kitty_mod+[ previous_window
 map kitty_mod+f move_window_forward
 map kitty_mod+b move_window_backward
 map kitty_mod+` move_window_to_top
 map kitty_mod+r start_resizing_window
-map kitty_mod+1 first_window
-map kitty_mod+2 second_window
-map kitty_mod+3 third_window
-map kitty_mod+4 fourth_window
-map kitty_mod+5 fifth_window
-map kitty_mod+6 sixth_window
-map kitty_mod+7 seventh_window
-map kitty_mod+8 eighth_window
-map kitty_mod+9 ninth_window
-map kitty_mod+0 tenth_window
+# map kitty_mod+1 first_window
+# map kitty_mod+2 second_window
+# map kitty_mod+3 third_window
+# map kitty_mod+4 fourth_window
+# map kitty_mod+5 fifth_window
+# map kitty_mod+6 sixth_window
+# map kitty_mod+7 seventh_window
+# map kitty_mod+8 eighth_window
+# map kitty_mod+9 ninth_window
+# map kitty_mod+0 tenth_window
 #: }}}
 
 #: Tab management {{{
@@ -1049,7 +1051,8 @@ map kitty_mod+p>h kitten hints --type hash --program -
 
 #: Miscellaneous {{{
 
-map kitty_mod+f11    toggle_fullscreen
+# map kitty_mod+f11    toggle_fullscreen
+map cmd+enter    toggle_fullscreen
 map kitty_mod+f10    toggle_maximized
 map kitty_mod+u      kitten unicode_input
 map kitty_mod+f2     edit_config_file
