--- a/coc/extensions/package.json
+++ b/coc/extensions/package.json
@@ -4,6 +4,7 @@
     "coc-html": ">=1.4.1",
     "coc-json": ">=1.3.4",
     "coc-prettier": ">=1.1.23",
+    "coc-snippets": ">=2.4.1",
     "coc-tslint-plugin": ">=1.2.0",
     "coc-tsserver": ">=1.6.8"
   }
