--- a/coc/extensions/package.json
+++ b/coc/extensions/package.json
@@ -1,19 +1,19 @@
 {
   "dependencies": {
-    "coc-css": "^1.2.6",
+    "coc-css": ">=1.2.6",
     "coc-cssmodules": "^1.1.1",
     "coc-emmet": "^1.1.6",
     "coc-eslint": "^1.4.5",
-    "coc-html": "^1.4.1",
-    "coc-json": "^1.3.4",
+    "coc-html": ">=1.4.1",
+    "coc-json": ">=1.3.4",
     "coc-prettier": ">=1.1.23",
     "coc-python": "^1.2.13",
     "coc-sh": "^0.6.0",
-    "coc-snippets": "^2.4.1",
+    "coc-snippets": ">=2.4.1",
     "coc-sql": "^0.5.0",
     "coc-stylelintplus": "^1.4.0",
     "coc-tslint-plugin": ">=1.2.0",
-    "coc-tsserver": "^1.7.0",
+    "coc-tsserver": ">=1.7.0",
     "coc-yaml": "^1.3.1"
   }
 }
