--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -1,22 +1,5 @@
 {
-  "coc.preferences.formatOnSaveFiletypes": [
-    "css",
-    "markdown",
-    "javascript",
-    "graphql",
-    "html",
-    "yaml",
-    "json",
-    "python",
-    "c",
-    "c++",
-    "cpp",
-    "ejs",
-    "sh",
-    "sql",
-    "js",
-    "jsx"
-  ],
+  "coc.preferences.formatOnSaveFiletypes": ["*"],
 
   "python.linting.enabled": true,
   "python.linting.pylintEnabled": true,
