new nvim plugin stuff
site: https://awesomeopensource.com/projects/nvim

--- a/coc/extensions/package.json
+++ b/coc/extensions/package.json
@@ -3,9 +3,9 @@
     "coc-css": "^1.2.6",
     "coc-cssmodules": "^1.1.1",
     "coc-emmet": "^1.1.6",
-    "coc-eslint": "^1.4.5",
+    "coc-eslint": ">=1.4.5",
     "coc-html": "^1.4.1",
-    "coc-json": "^1.3.4",
+    "coc-json": ">=1.3.5",
     "coc-prettier": ">=1.1.23",
     "coc-python": "^1.2.13",
     "coc-sh": "^0.6.0",
