last day of coc

--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -13,6 +13,9 @@
   ],
   "diagnostic.errorSign": "●",
   "diagnostic.infoSign": "●",
+  "emmet.showExpandedAbbreviation": "always",
+  "emmet.showAbbreviationSuggestions": true,
+  "emmet.includeLanguages": {},
   "snippets.userSnippetsDirectory": "~/.config/nvim/snips",
   "coc.preferences.extensionUpdateCheck": "daily"
 }
