--- a/coc/extensions/package.json
+++ b/coc/extensions/package.json
@@ -4,8 +4,10 @@
     "coc-cssmodules": "^1.1.1",
     "coc-emmet": "^1.1.6",
     "coc-eslint": ">=1.4.5",
+    "coc-highlight": ">=1.2.8",
     "coc-html": "^1.4.1",
     "coc-json": ">=1.3.6",
+    "coc-pairs": ">=1.3.0",
     "coc-prettier": ">=1.1.23",
     "coc-python": "^1.2.13",
     "coc-sh": "^0.6.0",
