--- a/coc/extensions/package.json
+++ b/coc/extensions/package.json
@@ -10,9 +10,11 @@
     "coc-pairs": ">=1.3.0",
     "coc-prettier": ">=1.1.23",
     "coc-python": "^1.2.13",
+    "coc-react-refactor": ">=0.5.0",
     "coc-sh": "^0.6.0",
     "coc-snippets": "^2.4.2",
     "coc-sql": ">=0.6.0",
+    "coc-styled-components": ">=0.5.0",
     "coc-stylelintplus": "^1.4.1",
     "coc-tslint-plugin": ">=1.2.0",
     "coc-tsserver": ">=1.8.1",
