--- a/coc/extensions/package.json
+++ b/coc/extensions/package.json
@@ -1,23 +1,13 @@
 {
   "dependencies": {
-    "coc-css": "^1.2.6",
-    "coc-cssmodules": "^1.1.1",
-    "coc-emmet": "^1.1.6",
+    "coc-css": ">=1.2.6",
     "coc-eslint": ">=1.4.5",
     "coc-highlight": ">=1.2.8",
-    "coc-html": "^1.4.1",
-    "coc-json": ">=1.3.6",
-    "coc-pairs": ">=1.3.0",
+    "coc-html": ">=1.4.1",
     "coc-prettier": ">=1.1.23",
-    "coc-python": "^1.2.13",
     "coc-react-refactor": ">=0.5.0",
-    "coc-sh": "^0.6.0",
-    "coc-snippets": "^2.4.2",
-    "coc-sql": ">=0.6.0",
+    "coc-snippets": ">=2.4.2",
     "coc-styled-components": ">=0.5.0",
-    "coc-stylelintplus": "^1.4.1",
-    "coc-tslint-plugin": ">=1.2.0",
-    "coc-tsserver": ">=1.8.1",
-    "coc-yaml": "^1.3.1"
+    "coc-tsserver": ">=1.8.1"
   }
 }
