--- a/yarn/global/package.json
+++ b/yarn/global/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
-    "create-react-app": "^4.0.3"
+    "create-react-app": "^4.0.3",
+    "neovim": "^4.10.0",
+    "tree-sitter-cli": "^0.20.0"
   }
 }
