kitty configs reorganized

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,5 +1,8 @@
- include ./Cobalt2.conf
-# include ./gruvbox_dark.conf
+include ./font.conf
+include ./ui.conf
+include ./cursor.conf
+include ./map.conf
+
 # don't draw extra borders, but fade the inactive text a bit
 active_border_color none
 inactive_text_alpha 0.6
@@ -7,42 +10,7 @@ inactive_text_alpha 0.6
 # tabbar should be at the top
 tab_bar_edge top
 tab_bar_style separator
-tab_separator " ┇"
-
-# open new split (window) with cmd+d retaining the cwd
-map cmd+n new_window_with_cwd
-
-# open new tab with cmd+t
-map cmd+t new_tab_with_cwd
-
-# new split with default cwd
-map cmd+shift+d new_window
-
-# switch between next and previous splits
-map cmd+]        next_window
-map cmd+[        previous_window
-
-# clear the terminal screen
-map cmd+k combine : clear_terminal scrollback active : send_text normal,application \x0c
-
-# jump to beginning and end of word
-map alt+left send_text all \x1b\x62
-map alt+right send_text all \x1b\x66
-
-# jump to beginning and end of line
-map cmd+left send_text all \x01
-map cmd+right send_text all \x05
-
-# Map cmd + <num> to corresponding tabs
-map cmd+1 goto_tab 1
-map cmd+2 goto_tab 2
-map cmd+3 goto_tab 3
-map cmd+4 goto_tab 4
-map cmd+5 goto_tab 5
-map cmd+6 goto_tab 6
-map cmd+7 got_tab 7
-map cmd+8 goto_tab 8
-map cmd+9 goto_tab 9o
+tab_separator " |"
 
 
 #: Number of lines of history to keep in memory for scrolling back.
@@ -61,10 +29,7 @@ map cmd+9 goto_tab 9o
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      Hack Nerd Font
-bold_font        auto
-italic_font      auto
-bold_italic_font auto
+
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
@@ -78,12 +43,8 @@ bold_italic_font auto
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 14.0
 
-#: Font size (in pts)
 
-adjust_line_height  0
-adjust_column_width 0
 
 #: Change the size of each character cell kitty renders. You can use
 #: either numbers, which are interpreted as pixels or percentages
@@ -104,7 +65,6 @@ adjust_column_width 0
 
 #:     symbol_map codepoints Font Family Name
 
-disable_ligatures never
 
 #: Choose how you want to handle multi-character ligatures. The
 #: default is to always render them.  You can tell kitty to not render
@@ -129,33 +89,6 @@ box_drawing_scale 0.001, 1, 1.5, 2
 
 #: Cursor customization {{{
 
-cursor #cccccc
-
-#: Default cursor color
-
-cursor_text_color #111111
-
-#: Choose the color of text under the cursor. If you want it rendered
-#: with the background color of the cell underneath instead, use the
-#: special keyword: background
-
-cursor_shape block
-
-#: The cursor shape can be one of (block, beam, underline)
-
-cursor_blink_interval -1
-
-#: The interval (in seconds) at which to blink the cursor. Set to zero
-#: to disable blinking. Negative values mean use system default. Note
-#: that numbers smaller than repaint_delay will be limited to
-#: repaint_delay.
-
-cursor_stop_blinking_after 15.0
-
-#: Stop blinking cursor after the specified number of seconds of
-#: keyboard inactivity.  Set to zero to never stop blinking.
-
-#: }}}
 
 #: Scrollback {{{
 
@@ -844,273 +777,3 @@ clear_all_shortcuts no
 #: kitty +kitten hints --hints-offset to zero for all mappings,
 #: including the builtin ones.
 
-#: Clipboard {{{
-
-map kitty_mod+c copy_to_clipboard
-
-#: There is also a copy_or_interrupt action that can be optionally
-#: mapped to Ctrl+c. It will copy only if there is a selection and
-#: send an interrupt otherwise.
-
-map kitty_mod+v  paste_from_clipboard
-map kitty_mod+s  paste_from_selection
-map shift+insert paste_from_selection
-map kitty_mod+o  pass_selection_to_program
-
-#: You can also pass the contents of the current selection to any
-#: program using pass_selection_to_program. By default, the system's
-#: open program is used, but you can specify your own, the selection
-#: will be passed as a command line argument to the program, for
-#: example::
-
-#:     map kitty_mod+o pass_selection_to_program firefox
-
-#: You can pass the current selection to a terminal program running in
-#: a new kitty window, by using the @selection placeholder::
-
-#:     map kitty_mod+y new_window less @selection
-
-#: }}}
-
-#: Scrolling {{{
-
-map kitty_mod+up        scroll_line_up
-map kitty_mod+k         scroll_line_up
-map kitty_mod+down      scroll_line_down
-map kitty_mod+j         scroll_line_down
-map kitty_mod+page_up   scroll_page_up
-map kitty_mod+page_down scroll_page_down
-map kitty_mod+home      scroll_home
-map kitty_mod+end       scroll_end
-map kitty_mod+h         show_scrollback
-
-#: You can pipe the contents of the current screen + history buffer as
-#: STDIN to an arbitrary program using the ``pipe`` function. For
-#: example, the following opens the scrollback buffer in less in an
-#: overlay window::
-
-map f1 pipe @ansi overlay less +G -R
-
-#: For more details on piping screen and buffer contents to external
-#: programs, see pipe.
-
-#: }}}
-
-#: Window management {{{
-
-map kitty_mod+enter new_window
-
-#: You can open a new window running an arbitrary program, for
-#: example::
-
-#:     map kitty_mod+y      new_window mutt
-
-#: You can open a new window with the current working directory set to
-#: the working directory of the current window using::
-
-#:     map ctrl+alt+enter    new_window_with_cwd
-
-#: You can open a new window that is allowed to control kitty via the
-#: kitty remote control facility by prefixing the command line with @.
-#: Any programs running in that window will be allowed to control
-#: kitty. For example::
-
-#:     map ctrl+enter new_window @ some_program
-
-#: You can open a new window next to the currently active window or as
-#: the first window, with::
-
-#:     map ctrl+n new_window !neighbor some_program
-#:     map ctrl+f new_window !first some_program
-
-map kitty_mod+n new_os_window
-
-#: Works like new_window above, except that it opens a top level OS
-#: kitty window. In particular you can use new_os_window_with_cwd to
-#: open a window with the current working directory.
-
-# map kitty_mod+w close_window
-map cmd+w close_window
-
-map kitty_mod+] next_window
-map kitty_mod+[ previous_window
-map kitty_mod+f move_window_forward
-map kitty_mod+b move_window_backward
-map kitty_mod+` move_window_to_top
-map kitty_mod+r start_resizing_window
-# map kitty_mod+1 first_window
-# map kitty_mod+2 second_window
-# map kitty_mod+3 third_window
-# map kitty_mod+4 fourth_window
-# map kitty_mod+5 fifth_window
-# map kitty_mod+6 sixth_window
-# map kitty_mod+7 seventh_window
-# map kitty_mod+8 eighth_window
-# map kitty_mod+9 ninth_window
-# map kitty_mod+0 tenth_window
-#: }}}
-
-#: Tab management {{{
-
-map kitty_mod+right next_tab
-map kitty_mod+left  previous_tab
-map kitty_mod+t     new_tab
-map kitty_mod+q     close_tab
-map kitty_mod+.     move_tab_forward
-map kitty_mod+,     move_tab_backward
-map kitty_mod+alt+t set_tab_title
-
-#: You can also create shortcuts to go to specific tabs, with 1 being
-#: the first tab, 2 the second tab and -1 being the previously active
-#: tab::
-
-#:     map ctrl+alt+1 goto_tab 1
-#:     map ctrl+alt+2 goto_tab 2
-
-#: Just as with new_window above, you can also pass the name of
-#: arbitrary commands to run when using new_tab and use
-#: new_tab_with_cwd. Finally, if you want the new tab to open next to
-#: the current tab rather than at the end of the tabs list, use::
-
-#:     map ctrl+t new_tab !neighbor [optional cmd to run]
-#: }}}
-
-#: Layout management {{{
-
-map kitty_mod+l next_layout
-
-#: You can also create shortcuts to switch to specific layouts::
-
-#:     map ctrl+alt+t goto_layout tall
-#:     map ctrl+alt+s goto_layout stack
-
-#: Similarly, to switch back to the previous layout::
-
-#:    map ctrl+alt+p last_used_layout
-#: }}}
-
-#: Font sizes {{{
-
-#: You can change the font size for all top-level kitty OS windows at
-#: a time or only the current one.
-
-map kitty_mod+equal     change_font_size all +2.0
-map kitty_mod+minus     change_font_size all -2.0
-map kitty_mod+backspace change_font_size all 0
-
-#: To setup shortcuts for specific font sizes::
-
-#:     map kitty_mod+f6 change_font_size all 10.0
-
-#: To setup shortcuts to change only the current OS window's font
-#: size::
-
-#:     map kitty_mod+f6 change_font_size current 10.0
-#: }}}
-
-#: Select and act on visible text {{{
-
-#: Use the hints kitten to select text and either pass it to an
-#: external program or insert it into the terminal or copy it to the
-#: clipboard.
-
-map kitty_mod+e kitten hints
-
-#: Open a currently visible URL using the keyboard. The program used
-#: to open the URL is specified in open_url_with.
-
-map kitty_mod+p>f kitten hints --type path --program -
-
-#: Select a path/filename and insert it into the terminal. Useful, for
-#: instance to run git commands on a filename output from a previous
-#: git command.
-
-map kitty_mod+p>shift+f kitten hints --type path
-
-#: Select a path/filename and open it with the default open program.
-
-map kitty_mod+p>l kitten hints --type line --program -
-
-#: Select a line of text and insert it into the terminal. Use for the
-#: output of things like: ls -1
-
-map kitty_mod+p>w kitten hints --type word --program -
-
-#: Select words and insert into terminal.
-
-map kitty_mod+p>h kitten hints --type hash --program -
-
-#: Select something that looks like a hash and insert it into the
-#: terminal. Useful with git, which uses sha1 hashes to identify
-#: commits
-
-
-#: The hints kitten has many more modes of operation that you can map
-#: to different shortcuts. For a full description see kittens/hints.
-#: }}}
-
-#: Miscellaneous {{{
-
-# map kitty_mod+f11    toggle_fullscreen
-map cmd+enter    toggle_fullscreen
-map kitty_mod+f10    toggle_maximized
-map kitty_mod+u      kitten unicode_input
-map kitty_mod+f2     edit_config_file
-map kitty_mod+escape kitty_shell window
-
-#: Open the kitty shell in a new window/tab/overlay/os_window to
-#: control kitty using commands.
-
-map kitty_mod+a>m    set_background_opacity +0.1
-map kitty_mod+a>l    set_background_opacity -0.1
-map kitty_mod+a>1    set_background_opacity 1
-map kitty_mod+a>d    set_background_opacity default
-map kitty_mod+delete clear_terminal reset active
-
-#: You can create shortcuts to clear/reset the terminal. For example::
-
-#:     # Reset the terminal
-#:     map kitty_mod+f9 clear_terminal reset active
-#:     # Clear the terminal screen by erasing all contents
-#:     map kitty_mod+f10 clear_terminal clear active
-#:     # Clear the terminal scrollback by erasing it
-#:     map kitty_mod+f11 clear_terminal scrollback active
-#:     # Scroll the contents of the screen into the scrollback
-#:     map kitty_mod+f12 clear_terminal scroll active
-
-#: If you want to operate on all windows instead of just the current
-#: one, use all instead of active.
-
-#: It is also possible to remap Ctrl+L to both scroll the current
-#: screen contents into the scrollback buffer and clear the screen,
-#: instead of just clearing the screen::
-
-#:     map ctrl+l combine : clear_terminal scroll active : send_text normal,application \x0c
-
-
-#: You can tell kitty to send arbitrary (UTF-8) encoded text to the
-#: client program when pressing specified shortcut keys. For example::
-
-#:     map ctrl+alt+a send_text all Special text
-
-#: This will send "Special text" when you press the ctrl+alt+a key
-#: combination.  The text to be sent is a python string literal so you
-#: can use escapes like \x1b to send control codes or \u21fb to send
-#: unicode characters (or you can just input the unicode characters
-#: directly as UTF-8 text). The first argument to send_text is the
-#: keyboard modes in which to activate the shortcut. The possible
-#: values are normal or application or kitty or a comma separated
-#: combination of them.  The special keyword all means all modes. The
-#: modes normal and application refer to the DECCKM cursor key mode
-#: for terminals, and kitty refers to the special kitty extended
-#: keyboard protocol.
-
-#: Another example, that outputs a word and then moves the cursor to
-#: the start of the line (same as pressing the Home key)::
-
-#:     map ctrl+alt+a send_text normal Word\x1b[H
-#:     map ctrl+alt+a send_text application Word\x1bOH
-
-#: }}}
-
-# }}}
