kitty configs reorganized

--- a/kitty/ui.conf
+++ b/kitty/ui.conf
@@ -1,2 +1,3 @@
-include ./Cobalt2.conf
-# include ./gruvbox_dark.conf
+# include ./themes/Cobalt2.conf
+# include ./themes/gruvbox_light.conf
+include ./themes/gruvbox_dark.conf
