--- a/kitty/font.conf
+++ b/kitty/font.conf
@@ -9,4 +9,17 @@ font_size 13.0
 adjust_line_height  0
 adjust_column_width 0
 
-disable_ligatures never
+# disable_ligatures never
+disable_ligatures cursor
+
+#: Choose how you want to handle multi-character ligatures. The
+#: default is to always render them.  You can tell kitty to not render
+#: them when the cursor is over them by using cursor to make editing
+#: easier, or have kitty never render them at all by using always, if
+#: you don't like them. The ligature strategy can be set per-window
+#: either using the kitty remote control facility or by defining
+#: shortcuts for it in kitty.conf, for example::
+
+#:     map alt+1 disable_ligatures_in active always
+#:     map alt+2 disable_ligatures_in all never
+#:     map alt+3 disable_ligatures_in tab cursor
