--- a/kitty/map.conf
+++ b/kitty/map.conf
@@ -1,4 +1,10 @@
+kitty_mod ctrl+shift
+
+#: The value of kitty_mod is used as the modifier for all default
+#: shortcuts, you can change it in your kitty.conf to change the
+#: modifiers for all the default shortcuts.
 # open new split (window) with cmd+d retaining the cwd
+
 map cmd+n new_window_with_cwd
 
 # open new tab with cmd+t
@@ -241,7 +247,7 @@ map kitty_mod+p>h kitten hints --type hash --program -
 #: Miscellaneous {{{
 
 # map kitty_mod+f11    toggle_fullscreen
-map cmd+enter    toggle_fullscreen
+map cmd+shift+enter    toggle_fullscreen
 map kitty_mod+f10    toggle_maximized
 map kitty_mod+u      kitten unicode_input
 map kitty_mod+f2     edit_config_file
