--- a/lvim/snippets/package.json
+++ b/lvim/snippets/package.json
@@ -16,6 +16,13 @@
           "javascriptreact"
         ],
         "path": "./javascript.json"
+      },
+      {
+        "language": [
+          "cpp",
+          "c"
+        ],
+        "path": "./cpp.json"
       }
     ]
   }
