--- a/kitty/ui.conf
+++ b/kitty/ui.conf
@@ -1,3 +1,4 @@
 # include ./themes/Cobalt2.conf
 # include ./themes/gruvbox_light.conf
-include ./themes/gruvbox_dark.conf
+
+# include ./themes/gruvbox_dark.conf
