--- a/kitty/ui.conf
+++ b/kitty/ui.conf
@@ -1,4 +1,5 @@
+include ./themes/dracula.conf
 # include ./themes/Cobalt2.conf
+# include ./themes/Github.conf
 # include ./themes/gruvbox_light.conf
-
 # include ./themes/gruvbox_dark.conf
